# max2alamo-2026

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  renew-interaction-limits.yml
alamo_format/: CMakeLists.txt
alamo_format/include/alamo_format/: ala_anim.h  alo_build.h  alo_model.h  anim_clip_list.h  chunk_io.h  chunk_tree.h  collision_tree.h  export_scene.h  legacy_clip_scan.h  shader_table.h  shadow_volume_check.h  skin_bone_remap.h  skin_weights.h  version.h.in  vertex_format_selector.h
alamo_format/src/: ala_reader.cpp  ala_writer.cpp  alo_build.cpp  alo_reader.cpp  alo_writer.cpp  anim_clip_list.cpp  chunk_reader.cpp  chunk_writer.cpp  collision_tree.cpp  legacy_clip_scan.cpp  shader_table.cpp  shadow_volume_check.cpp  skin_bone_remap.cpp  skin_weights.cpp  vertex_format_selector.cpp
alamo_format/tests/: CMakeLists.txt  ala_build_test.cpp  alo_build_test.cpp  anim_clip_list_test.cpp  chunk_io_test.cpp  chunk_reader_test.cpp  chunk_tree_test.cpp  chunk_writer_test.cpp  collision_tree_test.cpp  export_scene_test.cpp  legacy_clip_scan_test.cpp  shadow_volume_check_test.cpp  skin_bone_remap_test.cpp  skin_weights_test.cpp  vertex_format_selector_test.cpp
docs/: build.md  corpus.md  development-log.md  format-notes.md  release.md  wishlist.md
docs/plans/: phase-10-prereq.md  phase-14-diagnostic.md  phase-14b-static-mesh-bone-parent.md  phase-14c-gun-misaligned-findings.md  phase-14d-no-walker-bug-findings.md
docs/release-notes/: v0.9.0.md  v0.9.1.md
max2alamo/: CMakeLists.txt
max2alamo/resources/: max2alamo.def  max2alamo.rc  max2alamo.rc.in  utility_dialogs.rc  utility_resource.h
max2alamo/src/: alamo_proxy_helper.cpp  alamo_proxy_helper.h  alamo_utility.cpp  alamo_utility.h  alo_export.cpp  alo_export.h  animation_settings_dlg.cpp  animation_settings_dlg.h  legacy_clip_importer.cpp  legacy_clip_importer.h  plugin_entry.cpp  scene_walker.cpp  scene_walker.h
scripts/: check_shadow_volume_corpus.py  compare-tangents.py  dump-tangents.py  extract-meg.ps1  generate-max-preview-stubs.py  hex_edit_alo_chunks.py  inspect_billboard_orientation.py  inspect_mesh_bbox.py  renew-interaction-limits.sh  run-max-tests.ps1  setup-git-hooks.ps1  survey_bone_visibility.py  survey_vertex_formats.py  sweep_corpus_validator.py
shaders/max-preview/: BatchMeshAlpha.fx  BatchMeshGloss.fx  BlobStencilMasked.fx  Grass.fx  MeshAdditive.fx  MeshAdditiveOffset.fx  MeshAdditiveVColor.fx  MeshAlpha.fx  MeshAlphaGloss.fx  MeshAlphaScroll.fx  MeshBumpColorize.fx  MeshBumpReflectColorize.fx  MeshCollision.fx  MeshGloss.fx  MeshGlossColorize.fx  MeshHeat.fx  MeshLightVisualize.fx  MeshOccludedUnit.fx  MeshShadowVolume.fx  MeshShield.fx  MeshSolidColor.fx  Nebula.fx  Planet.fx  README.md  RSkinAdditive.fx  RSkinAdditiveVColor.fx  RSkinAlpha.fx  RSkinAlphaGloss.fx  RSkinBumpColorize.fx  RSkinBumpReflectColorize.fx  RSkinGloss.fx  RSkinGlossColorize.fx  RSkinHeat.fx  RSkinOccludedUnit.fx  RSkinShadowVolume.fx  Skydome.fx  TerrainMeshBump.fx  TerrainMeshGloss.fx  Tree.fx  alDefault.fx
tests/maxscript/: _harness.ms  _phase14d_box01_local_invariance.ms  _phase14d_snowtrooper_dump.ms  _phase14d_snowtrooper_export_real.ms  _phase14d_variants.ms  _smoke.ms  phase-6c-verify-params.ms  test_alamo_user_props.ms  test_biped_skinned.ms  test_bone_hierarchy.ms  test_bumpcolorize_params.ms  test_directional_light.ms  test_dummy_not_a_proxy.ms  test_freespot_no_target.ms  test_helper_as_bone.ms  test_legacy_cis_sbd.ms  test_legacy_iftx_d.ms  test_legacy_mc80_d.ms  test_legacy_snowtrooper.ms  test_mesh_and_omni_mixed.ms  test_omni_atten_disabled.ms  test_omni_hidden_in_max.ms  test_omni_light_basic.ms  test_omni_pure_primaries.ms  test_phase11_legacy_single_clip_back_compat.ms  test_phase11_multi_clip.ms  test_phase11_no_clips_no_ala.ms  test_phase11_tripwire_partial_export.ms  test_phase11_tripwire_precedence.ms  test_phase12_1_billboards_legacy_hook.ms  test_phase12_shadow_closed_shader.ms  test_phase12_shadow_closed_userprop.ms  test_phase12_shadow_mixed.ms  test_phase12_shadow_open_shader.ms  test_phase14_min_chain.ms  test_phase14b_static_mesh_parent_bone.ms  test_phase7_acceptance.ms  test_phase8_acceptance.ms  test_phase8_anim_60fps.ms  test_phase8_anim_long.ms  (+26 more)
tests/maxscript/verify/: _ala.py  _ala_dump_bone.py  _alo.py  _chain_dump.py  validate_alo.py  validate_playback.py  verify_test_alamo_user_props.py  verify_test_biped_skinned.py  verify_test_bone_hierarchy.py  verify_test_bumpcolorize_params.py  verify_test_directional_light.py  verify_test_dummy_not_a_proxy.py  verify_test_freespot_no_target.py  verify_test_helper_as_bone.py  verify_test_legacy_cis_sbd.py  verify_test_legacy_iftx_d.py  verify_test_legacy_mc80_d.py  verify_test_legacy_snowtrooper.py  verify_test_mesh_and_omni_mixed.py  verify_test_omni_atten_disabled.py  verify_test_omni_hidden_in_max.py  verify_test_omni_light_basic.py  verify_test_omni_pure_primaries.py  verify_test_phase11_legacy_single_clip_back_compat.py  verify_test_phase11_multi_clip.py  verify_test_phase11_no_clips_no_ala.py  verify_test_phase11_tripwire_partial_export.py  verify_test_phase11_tripwire_precedence.py  verify_test_phase12_1_billboards_legacy_hook.py  verify_test_phase12_shadow_closed_shader.py  verify_test_phase12_shadow_closed_userprop.py  verify_test_phase12_shadow_mixed.py  verify_test_phase12_shadow_open_shader.py  verify_test_phase14b_static_mesh_parent_bone.py  verify_test_phase7_acceptance.py  verify_test_phase8_acceptance.py  verify_test_phase8_anim_60fps.py  verify_test_phase8_anim_long.py  verify_test_phase8_anim_single_frame.py  verify_test_phase8_biped_animated.py  (+24 more)
tools/ala_diff/: CMakeLists.txt  main.cpp
tools/ala_typed_roundtrip/: CMakeLists.txt  main.cpp
tools/alo_dump/: CMakeLists.txt  main.cpp
tools/alo_roundtrip/: CMakeLists.txt  main.cpp
tools/alo_synth/: CMakeLists.txt  main.cpp
